--- a/P29 - K-MEANS/mod29_tarefa.ipynb
+++ b/P29 - K-MEANS/mod29_tarefa.ipynb
@@ -2748,7 +2748,7 @@
       "source": [
         "**Resposta:**\n",
         "\n",
-        "####  O gráfico de boxplot indica que o Grupo 2 tem uma mediana de bounce rate mais baixa, o que sugere que esses clientes interagem mais com o conteúdo, saindo menos rapidamente das páginas (o que poderia indicar maior engajamento).Este grupo tem a menor quantidade de clientes, mas a proporção de compradores (valor True em y1) é a maior entre os três grupos."
+        "####  O gráfico de boxplot indica que o grupo 2 de clientes da análise de 3 agrupamentos tem uma mediana de bounce rate mais baixa, o que sugere que esses clientes interagem mais com o conteúdo, saindo menos rapidamente das páginas (o que poderia indicar maior engajamento).Este grupo tem a menor quantidade de clientes, mas a proporção de compradores (valor True em y1) é a maior entre os três grupos."
       ]
     },
     {
