--- a/P30 - Hierárquicos  aglomerativos/mod30_Tarefa.ipynb
+++ b/P30 - Hierárquicos  aglomerativos/mod30_Tarefa.ipynb
@@ -1057,9 +1057,9 @@
         "id": "J8wp4jbeexkb"
       },
       "source": [
-        "##### Na sua opinião, o agrupamento capturou algum padrão natural dos dados? Qual?\n",
+        "#### Na sua opinião, o agrupamento capturou algum padrão natural dos dados? Qual?\n",
         "\n",
-        "###### Ao utilizar 6 grupos, identificamos subgrupos bem definidos dentro das três espécies. No caso da espécie Adelie, os grupos 1 e 2 apresentam diferenças sutis entre si, assim como os grupos 4 e 5 para a espécie Chinstrap, e os grupos 0 e 3 para a espécie Gentoo. Essas divisões sugerem variações naturais entre as espécies, que podem refletir adaptações a diferentes ambientes e condições ecológicas. As características observadas, como comprimento e profundidade do bico, e o comprimento das nadadeiras, provavelmente estão relacionadas a essas adaptações."
+        "##### Ao utilizar 6 grupos, identificamos subgrupos bem definidos dentro das três espécies. No caso da espécie Adelie, os grupos 1 e 2 apresentam diferenças sutis entre si, assim como os grupos 4 e 5 para a espécie Chinstrap, e os grupos 0 e 3 para a espécie Gentoo. Essas divisões sugerem variações naturais entre as espécies, que podem refletir adaptações a diferentes ambientes e condições ecológicas. As características observadas, como comprimento e profundidade do bico, e o comprimento das nadadeiras, provavelmente estão relacionadas a essas adaptações."
       ]
     },
     {
